[project]
name = "mlky"
dynamic = ["version"]
description = "Flexible Configurations: Because it's the only Way"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["mlky", "config"]
authors = [
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"}
]
maintainers = [
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"}
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click",
  "PyYAML",
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkapi",
  "mkdocstrings[python]",
  "pytkdocs[numpy-style]",
]

[project.urls]
repository = "https://github.com/jammont/mlky"
documentation = "https://jammont.github.io/mlky/"

[project.scripts]
mlky = "mlky:cli.cli.commands"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mlky/__init__.py"
