[metadata]
name = mlky
version = attr: mlky.__version__
author = James Montgomery
author_email = J.Montgomery@jpl.nasa.gov
description = Machine Learning key utilities
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
  click
  PyYAML

[options.extras_require]
dev =
  build

[options.entry_points]
console_scripts =
  mlky = mlky:cli
